# rotengine_profiler

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  buildlsp.bat  compile_and_run.bat  main.cpp  premake5.lua  shader_compile.bat
app/: first_app.cpp  first_app.hpp
include/: first_app.hpp  profiler.hpp
pipeline/: pipeline.cpp  pipeline.hpp
profiler/: json.hpp  profiler.cpp  profiler.hpp
shaders/: simple_shader.frag  simple_shader.vert  simple_shader.vert.spv
src/: first_app.cpp  pipeline.cpp  profiler.cpp  window.cpp
window/: window.cpp  window.hpp
